// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly House 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "aspectRatio": 1,
        "borderRadius": 3,
        "height": 32,
        "margin": 1,
        "width": "9%",
      },
      {
        "backgroundColor": "#888",
      },
    ]
  }
>
  <Text>
    1-1
  </Text>
</View>
`;

exports[`renders correctly House 2`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "aspectRatio": 1,
        "borderRadius": 3,
        "height": 32,
        "margin": 1,
        "width": "9%",
      },
      {
        "backgroundColor": "#FFFF00",
      },
    ]
  }
>
  <Text>
    1-2
  </Text>
</View>
`;
